--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Configuração do ícone da aplicação.
+    void SetWindowIcon(Image image);                            // Set icon for window (single image, RGBA 32bit, only PLATFORM_DESKTOP)
 
 Implementar audio.
 
