--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Terminar implementação dos exemplos.
 
+Desenhar imagem dentro e imagem????
+
 Configuração do ícone da aplicação.
     void SetWindowIcon(Image image);                            // Set icon for window (single image, RGBA 32bit, only PLATFORM_DESKTOP)
 
