preparing to implement sound

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Implementar áudio.
+    Usar https://github.com/goxr3plus/java-stream-player
     Terminar implementação dos exemplos.
 
 Empacotar e criar template no VSCode
