animations examples done. needs to review and fix primitives with start and end angles

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
-Melhorar tratamento de cores em hexa (jogar alpha para o fim?).
+Corrigir ângulos nos setores circulares, de elipse e arco.
+Conferir tratamento de cores em hexa (jogar alpha para o fim?).
+Trazer delta no update?
 Implementar "todos" os tipos de interpolação de movimento.
