finishing animations API. needs to split the implementation of tween animations based in percentage and based in time

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,4 @@
-Proxy -> Mapper
+Implementar exemplos de animação de interpolação:
+    Sem suavização.
+    Baseada em tempo.
+    Separar TweenAnimation em baseada em tempo e baseada em porcentagem.
