java stream player dependencies update

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-Traduzir documentação para inglês;
-Ajustar nome das classes de desenho;
-Criar método de redimensionamento para porcentagem.
+Traduzir documentação para inglês?
 
 Suporte à gamepads:
     Endereçar o problema do eixo Z futuramente.
