--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 Traduzir documentação para inglês?
 Criar animações de sprite maps baseado na largura (criação automática da quantidade).
+Permitir desenhar uma animação diretamente pela instância ao invés de ter que pegar o frame.
 
 Suporte à gamepads:
     Endereçar o problema do eixo Z futuramente.
