new draw rectangle methods

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
-Expandir API de desenho;
-   - adicionar métodos para mais variações
-   - adicionar métodos que invocam versões mais simples do Java2D (drawLine etc.)
+Criar componentes immediate mode! (v1.5.0)
 Adicionar build pelo maven para gerar pacotes de código e documentação
-apropriadamente (arquivos .jar).
+apropriadamente (arquivos .jar)?
 
 Separar o exemplos?
 Separar a engine do componente?
