--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Criar componentes immediate mode! (v1.5.0)
+    Melhorar a organização do código e dos nomes de métodos etc.
+    Melhorar a invocação dos construtores (reaproveitar!!!)
 
 Retirado da raygui:
 
