--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 Criar componentes immediate mode! (v1.5.0)
     Melhorar a organização do código e dos nomes de métodos etc.
     Melhorar a invocação dos construtores (reaproveitar!!!)
+    Documentar componentes apropriadamente.
 
 Retirado da raygui:
 
 # Basic Control
-  - Slider      (JSlider)
   - TextBox     (JTextField)
   - ComboBox    (JComboBox) -> implica em rolagem
   - ListBox     (JList)     -> implica em rolagem
