--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,7 @@
 Criar componentes immediate mode! (v1.5.0)
-    - Clique nos sliders faz mover.
     - GuiDropdownList -> implica em rolagem (reaproveitar o GuiList)
     - Sobrescrever método move em todos os componentes com componentes filhos.
     - Verificar todos os componentes passando a engine explicitamente!
-    - Sealed classes para os componentes?
-    - Documentar ps componentes apropriadamente.
+    - Documentar os componentes apropriadamente.
 
 Separar o exemplos futuramente.
