--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-Permitir trocar cores do texto e do fundo nos componentes.
+Preparar infraestrutura para definir temas para os componentes IMGUI.
 
 Separar o exemplos futuramente.
