GuiTheme class and infrastructure to the change

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
-Preparar infraestrutura para definir temas para os componentes IMGUI.
+Terminar o botão de troca de tema.
+Configurar o tema escuro.
 
 Separar o exemplos futuramente.
