--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,3 @@
-Alterar ícone dos exemplos para o ícone igual ao do showcase;
-
-Desenvolver componentes:
-    Área de texto.
-
 Separar o exemplos futuramente;
 
-Realizer testes com joysticks do playstation.
+Realizar testes com joysticks do playstation.
