--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
+Melhorar a entrada do componente de campo de texto, aumentando a quantidade símbolos que podem ser inseridos.
 Realizar testes com joysticks do playstation.
