--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,5 @@
+Bug:
+    Sistema de entrada se perdendo ao, por exemplo, redimensionar uma EngineFrame, tentando fechar uma EngineFrame com default close operation com DO_NOTHING, etc.
+    Mudar o sistema de input inteiro para usar a JInput?
+    
 Realizar testes com joysticks do playstation.
